<resources>
    <string name="app_name">Practica5</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_list">Create</string>
    <string name="title_create">Create</string>
    <string name="title_read">Create</string>
    <string name="title_update">Create</string>
    <string name="nombre">Digite nombre</string>
    <string name="telefono">Telefono</string>
    <string name="cantidad">Cantidad</string>
    <string name="guardar">Guardar</string>
    <string name="read">Read</string>
    <string name="list">List</string>
    <string name="buscar">Buscar</string>
    <string name="update">Update</string>
    <string name="actualizar">Actualizar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eliminar">Eliminar</string>
    <string name="borrar">Borrar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="deuda">Deuda</string>
    <string name="bienvenido_a_deudor_app">Bienvenido a Deudor APP</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="ingrese_contrase_a">Ingrese contraseña</string>
    <string name="ingrese_correo">Ingrese correo</string>
    <string name="deudor_app">Deudor APP</string>
    <string name="registro">Registro</string>
    <string name="digite_nombre">nombre</string>
    <string name="digite_correo_electr_nico">correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
</resources>